package com.hospital.Hospital.controller.drugController;

public class drugController {
}
