package com.hospital.Hospital.facadeService.drugService;

import com.hospital.Hospital.domain.drug.Drug;

import java.util.List;


public interface DrugService {
    List<Drug> getAllDrugs();
}
