package com.hospital.Hospital.integrational.registrationSender;

public interface RegistrationSender {
    void registerPatiant(long patientId, String firstName);
}
